# coursework_habits1

./: .coverage  .env.template  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  telegram_bot.py
.github/workflows/: ci.yaml
config/: middleware.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_habitlog_habit_and_more.py
nginx/: nginx.conf
tests/: conftest.py  test_api_habits.py  test_models.py  test_public_api.py  test_tasks.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_language.py
